2012-07-03  Nick Alcock  <nick.alcock@oracle.com>

	* GNUmakefile: No longer specify 64-bitness of file I/O: it is
	redundant on x86-64 and breaks fts().

	* libdtrace/dt_string.c (strrstr): New function.
	* libdtrace/dt_string.h (strrstr): Prototype it.
	* Makeconfig: Provide it if not already available.

2012-06-20  Nick Alcock  <nick.alcock@oracle.com>

	* Makeconfig (CONFIG_H): Add missing path slash.

	* libdtrace/dt_module.c (dt_module_destroy): Unchain destroyed
	modules from the module hash.

2012-06-18  Nick Alcock  <nick.alcock@oracle.com>

	Add a crude symbol-checking infrastructure, like Autoconf's
	AC_CHECK_LIB.  Use it to check for elf_getshdrstrndx().

	* Makeconfig: New file.
	* GNUmakefile: Include it.  Search the objdir for generated header files.
	* Makefunctions: All C compilations depend on the config.h file.
	* README.build.system: Describe the new infrastructure briefly.

	* include/port.h: Include config.h and provide the new names for
	the obsolete elf_getshstrndx() and elf_getshdrnum() if necessary.
	* libdtrace/dt_module.c (dt_module_update): Use elf_getshdrstrndx():
	elf_getshstrndx() is obsolete.
	* libproc/Psymtab.c (build_fake_elf): Likewise.  Also use
	elf_getshdrnum() rather than elf_getshnum().
	* (Pbuild_file_symtab): Likewise.

	Allow overriding of path to /proc.

	* libdtrace/dt_impl.h (dtrace_hdl): Add dt_procfs_path.
	* libdtrace/dt_open.c (_dtrace_defproc): Default value.
	(dt_vopen): Set the default.
	* libdtrace/dt_options.c (_dtrace_ctoptions): New 'procfspath'
	compile-time option (though also used at runtime).
	(dt_opt_procfs_path): New.
	* libproc/Pcontrol.c (Pset_procfs_path): New function.
	* libproc/libproc.h: Prototype it.

	* test/triggers/testprobe.c: Warning fix.

2012-06-14  Nick Alcock  <nick.alcock@oracle.com>

	Eliminate symbol-lookup duplication via macro-expansion.

	* libdtrace/dt_module.c (dt_module_syminit32, dt_module_syminit64)
	(dt_module_symcomp32, dt_module_symcomp64)