@@ -34,7 +34,7 @@ libdtrace-build_SOURCES = dt_lex.c dt_aggregate.c dt_as.c dt_buf.c dt_cc.c dt_cg
                           dt_module.c dt_names.c dt_open.c dt_options.c dt_parser.c \
                           dt_pcb.c dt_pid.c dt_pragma.c dt_printf.c dt_proc.c \
                           dt_program.c dt_provider.c dt_regset.c dt_string.c \
-                          dt_strtab.c dt_subr.c dt_work.c dt_xlator.c
+                          dt_strtab.c dt_subr.c dt_symtab.c dt_work.c dt_xlator.c
 
 SHLIBS += libdtrace
 
